# sink-snooper-stoppinator

./: .coveragerc  .gitignore  .pre-commit-config.yaml  README.md  config.py  main.py  pyproject.toml
.github/: copilot-instructions.md
assets/: .gitignore
detection/: camera.py  detector.py  preprocessing.py
deterrent/: __init__.py  audio_deterrent.py  gpio_deterrent.py
hardware/: camera.py
models/: .gitignore  yolo_config.py
recordings/: .gitignore
src/: config.py
src/detection/: camera.py  detector.py  preprocessing.py  video_recorder.py
src/deterrent/: __init__.py  _deterrent.py  audio_deterrent.py  gpio_deterrent.py  speech_deterrent.py
src/models/: yolo_config.py
src/utils/: logger.py
tests/src/detection/: test_camera.py  test_detector.py  test_preprocessing.py  test_video_recorder.py
tests/src/deterrent/: test__deterrent.py  test_audio_deterrent.py  test_gpio_deterrent.py  test_init_deterrent.py  test_speech_deterrent.py
tests/src/models/: test_yolo_config.py
tests/src/utils/: test_logger.py
utils/: logger.py
