[project]
name = "sink-snooper-stoppinator"
version = "0.1.0"
description = "Code to stop my cat from playing in the sink"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "loguru>=0.7.3",
    "numpy>=2.2.4",
    "onnx>=1.12.0",
    "onnxruntime>=1.21.0",
    "onnxslim>=0.1.50",
    "opencv-python>=4.11.0.86",
    "ultralytics>=8.3.23",
]
