[project]
name = "sink-snooper-stoppinator"
version = "0.1.0"
description = "Code to stop my cat from playing in the sink"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "langchain-ollama>=0.3.2",
    "loguru>=0.7.3",
    "numpy>=2.2.4",
    "onnx>=1.12.0",
    "onnxruntime>=1.21.0",
    "onnxslim>=0.1.50",
    "opencv-python>=4.11.0.86",
    "pre-commit>=4.2.0",
    "pydub>=0.25.1",
    "pyttsx3>=2.98",
    "simpleaudio>=1.0.4",
    "ultralytics>=8.3.23",
]

[project.optional-dependencies]
pi = [
    "rpi-gpio>=0.7.1 ; sys_platform == 'linux'",
]

[dependency-groups]
dev = [
    "pytest-cov>=6.1.1",
    "pytest>=8.3.5",
]

[tool.pytest.ini_options]
pythonpath = [
  "."
]
